[gd_scene load_steps=9 format=3 uid="uid://cvgkbx7bekr1g"]

[ext_resource type="Script" uid="uid://cpguqglwxt3xq" path="res://Game/Shop/shop.gd" id="1_6tjn2"]
[ext_resource type="Script" uid="uid://bhfkn37juchlj" path="res://Game/Player/weapon_resource.gd" id="2_a3od8"]
[ext_resource type="Resource" uid="uid://cwnengbqm7amo" path="res://Resources/Weapons/WoodenBasicBow.tres" id="3_moid4"]
[ext_resource type="Resource" uid="uid://c7dxl7hhasr45" path="res://Resources/Weapons/WoodenSword.tres" id="4_m8vwf"]
[ext_resource type="Resource" uid="uid://cche8rp7m1va" path="res://Resources/Weapons/WoodenClub.tres" id="5_e60wn"]
[ext_resource type="Script" uid="uid://cjocbpqojkuba" path="res://Game/Shop/coin_label.gd" id="6_a3od8"]
[ext_resource type="Texture2D" uid="uid://cxc3hkbciafdt" path="res://Assets/coin.png" id="6_moid4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m8vwf"]
atlas = ExtResource("6_moid4")
region = Rect2(3, 3, 10, 10)

[node name="Shop" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tjn2")
weapons = Array[ExtResource("2_a3od8")]([ExtResource("3_moid4"), ExtResource("4_m8vwf"), ExtResource("5_e60wn")])

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_m8vwf")
expand_mode = 3

[node name="CoinLabel" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Coins: 0"
script = ExtResource("6_a3od8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="RerollButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Reroll 
(Cost: 1)"

[node name="WeaponSelection" type="HBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="WeaponSelling" type="HBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75

[node name="Continue" type="Button" parent="."]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="HBoxContainer/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_button_pressed"]
